# sgprotonets

./: .gitignore  CLAUDE.md  additional.md  extract.py  form_debug.html  form_questions.json  form_raw_data.json  pyproject.toml  report.md  requirements.txt
configs/: 5way_1shot.yaml  5way_5shot.yaml  breakhis_binary.yaml  breakhis_subtype.yaml  default.yaml  iu_xray_multilabel.yaml
data/: __init__.py  breakhis.py  class_descriptions.py  class_descriptions_breakhis.py  episode_sampler.py  episode_sampler_hierarchical.py  iu_xray.py  preprocessing.py
data/processed_ml/: images  metadata.csv
evaluation/: __init__.py  evaluate.py  metrics.py  visualize.py
models/: __init__.py  fusion.py  projections.py  prototypes.py  semantic_encoder.py  sgam.py  sgprotonet.py  vis2sem.py  visual_encoder.py
prev_checkpoints/: eval_val.json  eval_val_multilabel.json
scripts/: ablation.py  check_anchors.py  check_anchors_mag.py  clean_reports.py  demo.py  eval.py  generate_breakhis_reports.py  preprocess_breakhis.py  preprocess_iu_xray.py  text_only_sanity.py  text_only_sanity_multilabel.py  tier2_leakage_probe.py  train.py
tests/: test_episode_sampler.py  test_fusion.py  test_prototype.py  test_sgam.py
training/: __init__.py  episode_loop.py  losses.py  schedulers.py  trainer.py
